# ZPyFlow

./: .dockerignore  .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  audit.toml  deny.toml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  sitemap.xml
.cargo/: config.toml
.github/workflows/: bench-regression.yml  ci.yml  docs.yml  release.yml
api/: index.html
benches/: pipeline.rs  simd_filter.rs
benchmarks/: index.html
design/: index.html
docker/: Dockerfile
docs/: ARCHITECTURE.md  contributing.md  release.md  when_is_it_fast.md
examples/: 01_basic_numeric.py  02_numpy_integration.py  03_pandas_integration.py  04_dataclasses.py  05_log_processing.py  06_etl_pipeline.py  07_ai_embeddings.py  08_parallel_and_performance.py  09_sequence_tools.py  README.md  index.html  usecase_ab_testing.py  usecase_api_response.py  usecase_content_pipeline.py  usecase_fraud_detection.py  usecase_game_simulation.py  usecase_langchain_langgraph.py  usecase_ml_feature_preprocessing.py  usecase_order_processing.py  usecase_pricing_rules.py  usecase_search_recommendation.py  usecase_user_segmentation.py
examples/adapters/: index.html
examples/field_dsl/: index.html
examples/groupby/: index.html
examples/numeric/: index.html
examples/numpy/: index.html
performance/: index.html
sandbox/benchmark/: README.md  bench_fastapi.py  bench_multiprocess.py  bench_threading.py  categories.py  conftest.py  run.py
sandbox/benchmark/benchmarks/: bench_aggregation.py  bench_arrow.py  bench_chained.py  bench_etl.py  bench_filter.py  bench_fraud.py  bench_groupby.py  bench_join_window.py  bench_ml_feature.py  bench_null.py  bench_objects.py  bench_vector_search.py  bench_vs_numpy.py
sandbox/benchmark/models/: __init__.py  generators.py
search/: search_index.json
site/docs/: api.md  benchmarks.md  design.md  index.md  performance.md
site/docs/examples/: adapters.md  field_dsl.md  groupby.md  index.md  numeric.md  numpy.md
src/: io.rs  lib.rs
src/core/: mod.rs  parallel.rs  sources.rs  traits.rs
src/core/numeric/: mod.rs  pipeline.rs  simd.rs
src/io/: csv.rs  jsonl.rs  mod.rs
src/parallel/: mod.rs
src/pipeline/: mod.rs  numeric.rs  obj.rs  sources.rs
src/python/: agg.rs  columnar.rs  conversion.rs  expr.rs  fastpath.rs  io_bridge.rs  join.rs  mod.rs  query.rs  schema.rs
src/python/query/: construct.rs  filter.rs  map_ops.rs  mod.rs  terminal.rs  transform.rs
src/simd/: mod.rs
tests/: conftest.py  test_api_exports.py  test_basic.py  test_groupby.py  test_io.py  test_misc.py  test_numeric.py  test_objects.py  test_performance.py  test_transforms.py  typing_examples.py
zpyflow/: __init__.py  __init__.pyi  _lambda_parser.py  _types.pyi  adapters.py  groupby.py
